frontend/deployment/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oneauth-ui-service
  namespace: oneauth-ui
spec:
  selector:
    app: oneauth-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
